--- a/src/Views/Services/services.css
+++ b/src/Views/Services/services.css
@@ -22,7 +22,7 @@
 .email-logo{
     display: flex;
     flex-direction: row;
-    font-size: 20px;
+    font-size: 17px;
     align-items: center;
     margin-bottom: 0;
     margin-top: 20px;
@@ -31,7 +31,7 @@
 .tel-logo{
     display: flex;
     flex-direction: row;
-    font-size: 20px;
+    font-size: 17px;
     margin-top: 20px;
 }
 
@@ -48,13 +48,21 @@
     margin-left: 10px;
 }
 
+.insta{
+    color: black;
+}
+
 .in{
     margin-left: 20px;
+    color: black;
 }
 
 .fb{
     margin-left: 20px;
+    color: black;
 }
+
+
 
 .date{
     display: flex;
@@ -102,7 +110,7 @@ input{
     
 .input-main{
     margin-top: 10px;
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -179,9 +187,9 @@ input{
 }
             
 
-@media (max-width: 790px) {
+@media (max-width: 1375px) {
     .services-main{
-       flex-direction: column;
+       flex-direction: column-reverse;
     }
     .head-services{
         width: 80%;
@@ -192,5 +200,15 @@ input{
     .date{
         width: 90%;
         margin-bottom: 30px;       
+        margin-top: 40px;
+        align-content: center;
+    }
+
+    .input-main{
+        flex-direction: column;
+    }
+
+    .social-logo{
+        align-self: flex-start;
     }
 }
