--- a/src/Views/Services/services.css
+++ b/src/Views/Services/services.css
@@ -62,7 +62,15 @@
     color: black;
 }
 
+.type-input{
+    width: 50%;
+    border: none;
+    border-bottom: 3px solid #b6f4fd;
+}
 
+.type-input:focus{
+    border: black;
+}
 
 .date{
     display: flex;
@@ -191,6 +199,12 @@ input{
     .services-main{
        flex-direction: column-reverse;
     }
+    .contact-service{
+        display: flex;    
+        flex-direction: column;
+        align-items: center;
+    }
+
     .head-services{
         width: 80%;
         text-align: center;
@@ -202,6 +216,13 @@ input{
         margin-bottom: 30px;       
         margin-top: 40px;
         align-content: center;
+    }
+
+    .type-input{
+        width: 80%;
+        align-self: center;
+        margin-top: 30px;
+        
     }
 
     .input-main{
