--- a/src/Views/About-us/about.css
+++ b/src/Views/About-us/about.css
@@ -45,7 +45,8 @@
 
     .aboutimg{
         width: 100%;
-        margin-right: 0px;
+        margin: 0;
+        text-align: center;
     }
 
     .about-head{
@@ -53,8 +54,8 @@
     }
 
     .about-sub{
-        width: auto;
-        margin-left: 0;
+        width: 90%;
         text-align: center;
+        margin-left: 0;
     }
 }
