--- a/src/Views/Home-Page/Home.css
+++ b/src/Views/Home-Page/Home.css
@@ -1,94 +1,92 @@
-
-.sec-1{
-    height: auto;
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
+.sec-1 {
+  height: auto;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-
-.sec-2{
-    height: auto;
-    background-color: #E0F7FA;
+.sec-2 {
+  height: auto;
+  background-color: #e0f7fa;
 }
 
-
-.head{
-    align-self: center;
-    padding-top: 10px;
+.head {
+  align-self: center;
+  padding-top: 10px;
 }
-.sub-head{
-    align-self: center;
-    text-align: center;
-    padding: 0 5px 0 5px;
+.sub-head {
+  align-self: center;
+  text-align: center;
+  padding: 0 5px 0 5px;
 }
 
-.carousel{
-    height: 600px;
-    width: 90%;
-    align-self: center;
+.carousel {
+  height: 600px;
+  width: 90%;
+  align-self: center;
+}
+
+.custom-line {
+  margin: 2rem 0;
+}
+
+.sub-img1 {
+  text-align: center;
+  font-size: 1rem;
+  width: 60%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 0 5px 0 5px;
+  align-self: center;
+}
+.card-home {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.sec-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.testimonials {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  margin-top: 30px;
+}
+
+.test-des {
+  text-align: center;
+  width: 70%;
+}
+.fst-test {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+.sst-test {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+
+.test-name {
+  color: rgb(148, 148, 148);
 }
 
 @media (max-width: 750px) {
-    .carousel{
-        height: 300px;
-    }
-}
-
-.custom-line{
-    margin: 2rem 0;
-}
-
-.sub-img1{
-    text-align: center;
-    font-size: 1rem;
-    width: 60%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 0 5px 0 5px;
-    align-self: center;
-}
-.card-home{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-
-.sec-2{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 30px;
-}
-
-.testimonials{
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    margin-top: 30px;
-}
-
-.test-des{
-    text-align: center;
-    width: 70%;
-}
-.fst-test{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-}
-.sst-test{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-}
-
-.test-name{
-    color: rgb(148, 148, 148);
+  .carousel {
+    height: 300px;
+  }
+  .sub-img1 {
+    width: 80%;
+  }
 }
